feat: added administration panel and needed controllers for that